# cinodex

./: .gitignore  Cargo.toml  Data.xlsx  README.md
src/: client.rs  extractor.rs  main.rs
