[package]
name = "cinodex"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
dotenv_codegen = "0.15"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.13"
regex = "1.0"
serde_json = "1"
md5 = "0.7"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "1.4.0"